Some additions to ImgMap (use button tag for Vimium, fix map size) fix sizing on mobile, footer in general

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -1,6 +1,8 @@
+@import "vars";
+
 #content {
   &__inner {
-    max-width: 800px;
+    max-width: $bp-m;
     padding: 10px;
     margin: auto;
   }
