--- a/_sass/_overrides.scss
+++ b/_sass/_overrides.scss
@@ -10,11 +10,16 @@ figure {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
 }
 
 figcaption {
   margin-top: 20px;
-  max-width: 500px;
 
   text-align: center;
+}
+
+pre {
+  max-width: 90vw;
+  overflow-x: auto;
 }
