--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -1,5 +1,8 @@
 @import "shadow";
 
+$bp-l: 1200px;
+$bp-m: 900px;
+
 $gray-1: #f6f6f6;
 $gray-2: #eee;
 $gray-3: #aaa;
